<resources>
    <string name="app_name">PADC7-HelloTestAutomation</string>
    <string name="action_settings">Settings</string>

    <string name="name_label">Your name:</string>
    <string name="dob_label">Your date of birth:</string>
    <string name="email_label">Your Email address:</string>
    <string name="settings_title">My Settings</string>
    <string name="save">Save</string>
    <string name="revert">Revert</string>
    <string name="name_hint">Enter your name</string>
    <string name="email_hint">Enter your Email</string>

    <string name="update_text">Update history</string>
    <string name="input_text_hint">Text to add</string>
    <string name="new_text">Empty log</string>
</resources>
